[project]
name = "python-new"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]

[tool.black]
line-length = 119
target-version = ['py311']
exclude = ['.git']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
# Запрещаем нетипизированные определения функций
disallow_untyped_defs = true
# Предупреждаем о возвращении Any
warn_return_any = true
# Исключаем папку venv
exclude = [
    "venv/",
    ".*/venv/",
    ".*/venv/.*",
]

disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
